Fix text overflow on small screens

--- a/styles.css
+++ b/styles.css
@@ -113,13 +113,21 @@ header {
     display: flex;
     justify-content: center;
     text-align: center;
-    height: calc(100vh - var(--header-height));
+    min-height: calc(100vh - var(--header-height));
 }
 
 .introduction-text {
     margin: auto auto;
-    padding: 0 1rem 5rem 1rem;
+    padding: 0rem 1rem 0rem 1rem;
+    position: relative;
+    top: -4.2rem;
 
+}
+
+@media (max-width: 350px) {
+    .introduction-text {
+        top: 0;
+    }
 }
 
 .introduction-text h1 {
@@ -198,10 +206,10 @@ header {
 
 /* section 3 contact section */
 #contact-section {
-    height: calc(100vh - var(--header-height) - 5rem);
+    min-height: calc(100vh - var(--header-height) - 5rem);
     text-align: center;
     display: flex;
-    min-height: 25rem;
+
     
 }
 
@@ -212,8 +220,7 @@ header {
 }
 
 .contact-text h1 {
-    margin-top: -5rem;
-    margin-bottom: 0;
+    margin: 0;
     text-align: center;
     font-size: 4rem;
     font-weight: normal;
